--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -254,10 +254,10 @@ physicist Paolo Budinich."
       substeps:
         - title: "<u>10:00-12:30</u>: Poster session with some of our sponsors;"
         - title: "<u>12:30-13:00</u>: Closing ceremony."
-    
+
     - time:
       title: "EXTRA ACTIVITY"
       descriptions:
         - "Lunch outside the city with the participants who manage to stay longer after the event and want to discover a local experience."
-        - "All costs are up to you. The place is not recommended for vegetarians/vegans."
+        - "All costs are up to you. The place is not recommended for vegans."
         - "Stay tuned for updates!"
