--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -52,7 +52,7 @@
 
 - id: carta
   name: Dott. Lorenzo Carta
-  # photo: ""
+  photo: "/img/speakers/carta/foto_carta.jpeg"
   bio: "Lorenzo Carta is a PhD student in Applied Data Science and Artificial Intelligence at the University of Trieste. He has a background in Philosophy and a postgraduate degree in Science Communication from SISSA. His research focuses on AI technologies through the lens of Science and Technology Studies (STS) and the governance of emerging technologies. He collaborates with SISSA Medialab and the Trieste Science+Fiction Festival on science communication initiatives. He has developed a discussion game on open access publishing for SISSA Medialab."
 
 - id: camilli
