aggiornamento programma e speakers

--- a/_data/facilities.yml
+++ b/_data/facilities.yml
@@ -38,7 +38,7 @@ cards:
         map: https://maps.app.goo.gl/Dg5dRUTaoKaPAcX1A
 
       - img: img/facilities/padriciano.jpg
-        title: AREA Science Park
+        title: Area Science Park
         tag: 'padriciano'
         descr: ''
         site: https://www.areasciencepark.it/en/
