typo preview panizon

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -182,7 +182,7 @@ physicist Paolo Budinich."
       speakers:
         - name: "Emanuele Panizon"
           photo: "/img/speakers/panizon/foto_panizon.jpg"
-          description: "AI researcher at the Laboratory of Data Engineering at the AREA Science Park"
+          description: "AI researcher at the Laboratory of Data Engineering at AREA Science Park"
           id: "panizon"
       note: "Private transportation provided."
       # description: "Participants will have the opportunity to visit the laboratories of AREA Science Park, Elettra Sincrotrone, CNR and INFN."
